First step in supporting control structures as instruction dependencies (to support switches and ifs inside expression): new instruction dependency tree, to replace CodeNodes.

--- a/SCICompanionLib/SCICompanionLib.vcxproj
+++ b/SCICompanionLib/SCICompanionLib.vcxproj
@@ -186,6 +186,7 @@
   <ItemGroup>
     <ClCompile Include="Src\Compile\CFGNode.cpp" />
     <ClCompile Include="Src\Compile\ControlFlowGraphViz.cpp" />
+    <ClCompile Include="Src\Compile\DecompilerNew.cpp" />
     <ClCompile Include="Src\Compile\DecompileScript.cpp" />
     <ClCompile Include="Src\Compile\DisassembleHelper.cpp" />
     <ClCompile Include="Src\Compile\Disassembler.cpp" />
@@ -217,6 +218,7 @@
     <ClCompile Include="Src\Resources\VersionDetectionHelper.cpp" />
     <ClCompile Include="Src\Resources\View.cpp" />
     <ClCompile Include="Src\Util\AudioPlayback.cpp" />
+    <ClInclude Include="Src\Compile\DecompilerNew.h" />
     <ClInclude Include="Src\Dialogs\PaletteEditorCommon.h" />
     <ClInclude Include="Src\Dialogs\PaletteEditorDialog.h" />
     <ClInclude Include="Src\MFCDocuments\PaletteDoc.h" />
