--- a/SCICompanionLib/SCICompanionLib.vcxproj.filters
+++ b/SCICompanionLib/SCICompanionLib.vcxproj.filters
@@ -549,9 +549,6 @@
     <ClCompile Include="Src\MFCFrames\PaletteChildFrame.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Src\Compile\CFGNode.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Src\Compile\ControlFlowGraph.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -562,6 +559,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Src\Compile\DecompilerNew.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Compile\ControlFlowNode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -1160,9 +1160,6 @@
     <ClInclude Include="Src\Dialogs\PaletteEditorCommon.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Src\Compile\CFGNode.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Src\Compile\ControlFlowGraph.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -1173,6 +1170,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Src\Compile\DecompilerNew.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Compile\ControlFlowNode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
