- show palette numbers for selected things - fix some bugs with audioresource source

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1437,6 +1437,7 @@ BEGIN
     PUSHBUTTON      "E&xport",IDC_BUTTON_SAVE,236,177,50,14
     PUSHBUTTON      "&Import",IDC_BUTTON_LOAD,236,160,50,14
     CONTROL         "Fixed",IDC_CHECK2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,232,23,33,10
+    EDITTEXT        IDC_EDITRANGE,232,61,54,67,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
 END
 
 IDD_PALETTE_EDITOR_EMBEDDED DIALOGEX 0, 0, 293, 236
@@ -1450,6 +1451,7 @@ BEGIN
     PUSHBUTTON      "E&xport",IDC_BUTTON_SAVE,236,215,50,14
     PUSHBUTTON      "&Import",IDC_BUTTON_LOAD,236,198,50,14
     CONTROL         "Fixed",IDC_CHECK2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,232,23,33,10
+    EDITTEXT        IDC_EDITRANGE,232,61,54,67,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
 END
 
 
