--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -469,6 +469,7 @@ BEGIN
         MENUITEM "View &script resource",       ID_SCRIPT_VIEWSCRIPTRESOURCE
         MENUITEM "View syntax &tree",           ID_SCRIPT_VIEWSYNTAXTREE
         MENUITEM "Class hierarchy",             33015
+        MENUITEM "Manage decompilation",        ID_SCRIPT_MANAGEDECOMPILATION
     END
     POPUP "&Help"
     BEGIN
@@ -1454,16 +1455,18 @@ BEGIN
     EDITTEXT        IDC_EDITRANGE,232,61,54,67,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
 END
 
-IDD_DECOMPILER DIALOGEX 0, 0, 469, 303
+IDD_DECOMPILER DIALOGEX 0, 0, 523, 303
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Decompile"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "Close",IDOK,412,282,50,14
-    CONTROL         "",IDC_LIST1,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,7,127,289
-    DEFPUSHBUTTON   "&Decompile",IDC_DECOMPILE,147,7,50,14
-    DEFPUSHBUTTON   "Clear SCO",IDC_CLEARSCO,147,25,50,14
-    EDITTEXT        IDC_EDIT1,209,7,253,168,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
+    DEFPUSHBUTTON   "Close",IDOK,466,282,50,14
+    CONTROL         "",IDC_LISTSCRIPTS,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_EDITLABELS | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,7,7,127,289
+    PUSHBUTTON      "&Decompile",IDC_DECOMPILE,142,7,55,14
+    PUSHBUTTON      "Clear SCO",IDC_CLEARSCO,142,25,55,14
+    EDITTEXT        IDC_EDITSCRIPT,248,7,268,168,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL | WS_HSCROLL
+    EDITTEXT        IDC_DECOMPILATIONRESULTS,248,184,268,89,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL | WS_HSCROLL
+    CONTROL         "",IDC_TREESCO,"SysTreeView32",TVS_EDITLABELS | WS_BORDER | WS_HSCROLL | WS_TABSTOP,142,113,98,183
 END
 
 
@@ -1982,11 +1985,12 @@ BEGIN
     IDD_DECOMPILER, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 462
+        RIGHTMARGIN, 516
         VERTGUIDE, 134
-        VERTGUIDE, 147
+        VERTGUIDE, 142
         VERTGUIDE, 197
-        VERTGUIDE, 209
+        VERTGUIDE, 240
+        VERTGUIDE, 248
         TOPMARGIN, 7
         BOTTOMMARGIN, 296
     END
