- a bit more decompiler dialog work - automatically assign script filenames

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1467,6 +1467,7 @@ BEGIN
     EDITTEXT        IDC_EDITSCRIPT,248,7,268,168,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL | WS_HSCROLL
     EDITTEXT        IDC_DECOMPILATIONRESULTS,248,184,268,89,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL | WS_HSCROLL
     CONTROL         "",IDC_TREESCO,"SysTreeView32",TVS_EDITLABELS | WS_BORDER | WS_HSCROLL | WS_TABSTOP,142,113,98,183
+    PUSHBUTTON      "Set Filenames",IDC_ASSIGNFILENAMES,142,92,55,14
 END
 
 
