--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1460,7 +1460,7 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "Decompile"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "Close",IDOK,466,282,50,14
+    DEFPUSHBUTTON   "Close",IDCANCEL,466,282,50,14
     CONTROL         "",IDC_LISTSCRIPTS,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_EDITLABELS | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,7,7,127,289
     PUSHBUTTON      "&Decompile",IDC_DECOMPILE,142,7,55,14
     PUSHBUTTON      "Clear SCO",IDC_CLEARSCO,142,25,55,14
