- put decompiling on a background thread - refactor appState out of a bunch of places, so we use GameFolderHelper - status message system for decompiling - support for aborting decompilation - beginning of auto-fallback mechanism - fixed long-standing but in OpArgs, where

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1455,19 +1455,21 @@ BEGIN
     EDITTEXT        IDC_EDITRANGE,232,61,54,67,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
 END
 
-IDD_DECOMPILER DIALOGEX 0, 0, 523, 303
+IDD_DECOMPILER DIALOGEX 0, 0, 607, 303
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Decompile"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "Close",IDCANCEL,466,282,50,14
-    CONTROL         "",IDC_LISTSCRIPTS,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_EDITLABELS | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,7,7,127,289
-    PUSHBUTTON      "&Decompile",IDC_DECOMPILE,142,7,55,14
-    PUSHBUTTON      "Clear SCO",IDC_CLEARSCO,142,25,55,14
-    EDITTEXT        IDC_EDITSCRIPT,248,7,268,168,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL | WS_HSCROLL
-    EDITTEXT        IDC_DECOMPILATIONRESULTS,248,184,268,89,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL | WS_HSCROLL
-    CONTROL         "",IDC_TREESCO,"SysTreeView32",TVS_EDITLABELS | WS_BORDER | WS_HSCROLL | WS_TABSTOP,142,113,98,183
-    PUSHBUTTON      "Set Filenames",IDC_ASSIGNFILENAMES,142,92,55,14
+    DEFPUSHBUTTON   "Close",IDCANCEL,550,282,50,14
+    CONTROL         "",IDC_LISTSCRIPTS,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_EDITLABELS | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,7,7,156,289
+    PUSHBUTTON      "&Decompile",IDC_DECOMPILE,174,7,68,14
+    PUSHBUTTON      "Clear SCO",IDC_CLEARSCO,174,25,68,14
+    EDITTEXT        IDC_EDITSCRIPT,308,7,292,168,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL | WS_HSCROLL
+    CONTROL         "",IDC_TREESCO,"SysTreeView32",TVS_EDITLABELS | WS_BORDER | WS_HSCROLL | WS_TABSTOP,174,113,123,183
+    PUSHBUTTON      "Set Filenames",IDC_ASSIGNFILENAMES,174,92,68,14
+    LISTBOX         IDC_DECOMPILATIONRESULTS,308,178,292,98,LBS_NOINTEGRALHEIGHT | LBS_NOSEL | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "Cancel",IDC_DECOMPILECANCEL,257,7,40,14,WS_DISABLED
+    EDITTEXT        IDC_DECOMPILESTATUS,308,282,207,14,ES_AUTOHSCROLL | ES_READONLY
 END
 
 
@@ -1986,12 +1988,12 @@ BEGIN
     IDD_DECOMPILER, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 516
-        VERTGUIDE, 134
-        VERTGUIDE, 142
-        VERTGUIDE, 197
-        VERTGUIDE, 240
-        VERTGUIDE, 248
+        RIGHTMARGIN, 600
+        VERTGUIDE, 163
+        VERTGUIDE, 174
+        VERTGUIDE, 242
+        VERTGUIDE, 297
+        VERTGUIDE, 308
         TOPMARGIN, 7
         BOTTOMMARGIN, 296
     END
