- perf improvement for loadnig compiled scripts in SCI1.1 - better dup resolution - debug controlflow and instruction consumption. - support for multiple "NeedsStack"

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1467,9 +1467,12 @@ BEGIN
     EDITTEXT        IDC_EDITSCRIPT,308,7,292,168,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL | WS_HSCROLL
     CONTROL         "",IDC_TREESCO,"SysTreeView32",TVS_EDITLABELS | WS_BORDER | WS_HSCROLL | WS_TABSTOP,174,113,123,183
     PUSHBUTTON      "Set Filenames",IDC_ASSIGNFILENAMES,174,92,68,14
-    LISTBOX         IDC_DECOMPILATIONRESULTS,308,178,292,98,LBS_NOINTEGRALHEIGHT | LBS_NOSEL | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Cancel",IDC_DECOMPILECANCEL,257,7,40,14,WS_DISABLED
     EDITTEXT        IDC_DECOMPILESTATUS,308,282,207,14,ES_AUTOHSCROLL | ES_READONLY
+    CONTROL         "Debug inst consumption",IDC_CHECKINSTRUCTIONCONSUMPTION,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,174,78,97,10
+    CONTROL         "Debug control flow",IDC_CHECKCONTROLFLOW,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,174,65,81,10
+    EDITTEXT        IDC_DECOMPILATIONRESULTS,308,180,292,93,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
 END
 
 
