--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1472,7 +1472,8 @@ BEGIN
     CONTROL         "Debug inst consumption",IDC_CHECKINSTRUCTIONCONSUMPTION,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,174,78,97,10
     CONTROL         "Debug control flow",IDC_CHECKCONTROLFLOW,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,174,65,81,10
-    EDITTEXT        IDC_DECOMPILATIONRESULTS,308,180,292,93,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_DECOMPILATIONRESULTS,308,180,292,78,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL
+    CONTROL         "",IDC_PROGRESS1,"msctls_progress32",PBS_MARQUEE | NOT WS_VISIBLE | WS_BORDER,308,263,207,14
 END
 
 
