- added stats - put in more exceptions - fixed debug control flow stuff. - fixed LOOKUP_ERROR for empty strings. - fixed 32bit export issue with SCI1.0 - fixed child cloning issue with ConsumptionNode - stealing switch values caused stealing needed stack nodes. Fixed.

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1474,6 +1474,7 @@ BEGIN
     CONTROL         "Debug control flow",IDC_CHECKCONTROLFLOW,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,174,65,81,10
     EDITTEXT        IDC_DECOMPILATIONRESULTS,308,180,292,78,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL
     CONTROL         "",IDC_PROGRESS1,"msctls_progress32",PBS_MARQUEE | NOT WS_VISIBLE | WS_BORDER,308,263,207,14
+    EDITTEXT        IDC_EDITDEBUGMATCH,174,50,68,14,ES_AUTOHSCROLL
 END
 
 
