- fixed sco problem with local var naming - sort of update open scripts... still flakey - remove decomile menuy - update sco window cleared. - SCO treeview message

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -464,7 +464,6 @@ BEGIN
         MENUITEM "&Insert object",              32842
         MENUITEM SEPARATOR
         MENUITEM "&Disassemble",                ID_SCRIPT_DISASSEMBLE
-        MENUITEM "Decompile",                   ID_SCRIPT_DECOMPILE
         MENUITEM "View &object file",           ID_SCRIPT_VIEWOBJECTFILE
         MENUITEM "View &script resource",       ID_SCRIPT_VIEWSCRIPTRESOURCE
         MENUITEM "View syntax &tree",           ID_SCRIPT_VIEWSYNTAXTREE
@@ -1464,8 +1463,8 @@ BEGIN
     CONTROL         "",IDC_LISTSCRIPTS,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_EDITLABELS | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,7,7,156,289
     PUSHBUTTON      "&Decompile",IDC_DECOMPILE,174,7,68,14
     PUSHBUTTON      "Clear SCO",IDC_CLEARSCO,174,25,68,14
-    EDITTEXT        IDC_EDITSCRIPT,308,7,292,168,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL | WS_HSCROLL
-    CONTROL         "",IDC_TREESCO,"SysTreeView32",TVS_EDITLABELS | WS_BORDER | WS_HSCROLL | WS_TABSTOP,174,113,123,183
+    EDITTEXT        IDC_EDITSCRIPT,308,7,292,168,ES_MULTILINE | ES_READONLY | WS_VSCROLL
+    CONTROL         "",IDC_TREESCO,"SysTreeView32",TVS_EDITLABELS | WS_BORDER | WS_HSCROLL | WS_TABSTOP,174,131,123,165
     PUSHBUTTON      "Set Filenames",IDC_ASSIGNFILENAMES,174,92,68,14
     PUSHBUTTON      "Cancel",IDC_DECOMPILECANCEL,257,7,40,14,WS_DISABLED
     EDITTEXT        IDC_DECOMPILESTATUS,308,282,207,14,ES_AUTOHSCROLL | ES_READONLY
@@ -1475,6 +1474,7 @@ BEGIN
     EDITTEXT        IDC_DECOMPILATIONRESULTS,308,180,292,78,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL
     CONTROL         "",IDC_PROGRESS1,"msctls_progress32",PBS_MARQUEE | NOT WS_VISIBLE | WS_BORDER,308,263,207,14
     EDITTEXT        IDC_EDITDEBUGMATCH,174,50,68,14,ES_AUTOHSCROLL
+    LTEXT           "SCO:",IDC_INSTRUCTIONS,174,117,18,8
 END
 
 
