--- a/SCICompanionLib/SCICompanionLib.vcxproj.filters
+++ b/SCICompanionLib/SCICompanionLib.vcxproj.filters
@@ -585,6 +585,9 @@
     <ClCompile Include="Src\Compile\GenerateScriptResource.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Src\Compile\DecompilerSpecialCases.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SCICompanionLib.h">
